--- a/count/index.html
+++ b/count/index.html
@@ -1286,7 +1286,7 @@ class="themespring" -->
                             </use>
                         </svg>
                         
-                        <span class="count-numbers"><a href="/">11</a></span>
+                        <span class="count-numbers"><a href="/">12</a></span>
                         
                         <span class="count-name">文章</span>
                     </div>
@@ -1374,7 +1374,7 @@ class="themespring" -->
                 name: '文章篇数',
                 type: 'line',
                 color: ['#6772e5'],
-                data: [0,0,0,0,0,0,0,1,3,5],
+                data: [0,0,0,0,0,0,0,1,4,5],
                 markPoint: {
                     symbolSize: 45,
                     color: ['#fa755a','#3ecf8e','#82d3f4'],
@@ -1416,7 +1416,7 @@ class="themespring" -->
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"技术","value":6},{"name":"随笔","value":2},{"name":"收藏","value":1},{"name":"转载","value":2}],
+                data: [{"name":"技术","value":7},{"name":"随笔","value":2},{"name":"收藏","value":1},{"name":"转载","value":2}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
@@ -1440,7 +1440,7 @@ class="themespring" -->
         xAxis: [
             {
                 type: 'category',
-                data: ["随笔","Docker","API","AList","美化效率","宝藏句子","生活","VPS","Linux","抖音"]
+                data: ["AList","随笔","Docker","API","美化效率","宝藏句子","生活","VPS","Linux","抖音"]
             }
         ],
         yAxis: [
@@ -1453,7 +1453,7 @@ class="themespring" -->
                 type: 'bar',
                 color: ['#82d3f4'],
                 barWidth : 18,
-                data: [2,1,1,1,1,1,1,1,1,1],
+                data: [2,2,1,1,1,1,1,1,1,1],
                 markPoint: {
                     symbolSize: 45,
                     data: [{
