添加评论博主标签 Updated By Github Actions

--- a/ticktack/index.html
+++ b/ticktack/index.html
@@ -1845,11 +1845,11 @@ class="themespring" -->
 
         adminEmailMd5: '',
 
-        master: [""],
+        master: ["6b922a7268ecf15b7de33e844cfb9fba"],
         friends: [""],
         tagMeta: ["博主", "小伙伴", "访客"],
         // tagMeta: '博主,小伙伴,访客',
-        // master: '',
+        // master: '6b922a7268ecf15b7de33e844cfb9fba',
         // friends: '',
         emoticonUrl: ["https://cdn.jsdelivr.net/npm/alus@latest"]
     });
