解决vercel路由问题 Updated By Github Actions

--- a/count/index.html
+++ b/count/index.html
@@ -1460,7 +1460,7 @@ class="themespring" -->
         xAxis: [
             {
                 type: 'category',
-                data: ["随笔","Docker","API","AList","美化效率","宝藏句子","VPS","生活","Linux","抖音"]
+                data: ["随笔","Docker","API","AList","美化效率","宝藏句子","生活","VPS","Linux","抖音"]
             }
         ],
         yAxis: [
