Update from https://github.com/BarryYangi/Obsidian/commit/9db3e15b9b1d8d9916975b8c6ce01c97261661ef Updated By Github Actions

--- a/count/index.html
+++ b/count/index.html
@@ -1395,7 +1395,7 @@ class="themespring" -->
                 name: '文章篇数',
                 type: 'line',
                 color: ['#6772e5'],
-                data: [0,0,0,0,0,1,3,5,9,4],
+                data: [0,0,0,0,0,1,3,6,9,3],
                 markPoint: {
                     symbolSize: 45,
                     color: ['#fa755a','#3ecf8e','#82d3f4'],
@@ -1437,7 +1437,7 @@ class="themespring" -->
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"收藏","value":2},{"name":"技术","value":13},{"name":"转载","value":4},{"name":"前端","value":1},{"name":"随笔","value":2}],
+                data: [{"name":"收藏","value":2},{"name":"技术","value":14},{"name":"转载","value":4},{"name":"前端","value":1},{"name":"随笔","value":2}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
@@ -1461,7 +1461,7 @@ class="themespring" -->
         xAxis: [
             {
                 type: 'category',
-                data: ["VPS","随笔","Linux","前端","Regex","keep","运动","GitHub","Docker","CI/CD"]
+                data: ["Docker","VPS","随笔","Linux","前端","Regex","keep","运动","GitHub","CI/CD"]
             }
         ],
         yAxis: [
@@ -1474,7 +1474,7 @@ class="themespring" -->
                 type: 'bar',
                 color: ['#82d3f4'],
                 barWidth : 18,
-                data: [2,2,2,1,1,1,1,1,1,1],
+                data: [2,2,2,2,1,1,1,1,1,1],
                 markPoint: {
                     symbolSize: 45,
                     data: [{
